@@ -4,6 +4,7 @@ New features:
 ...G...... [ZBXNEXT-2325] added CPU guest and guest priority metrics to system.cpu.util[] item, supported on Linux kernels starting from 2.6.24 and 2.6.33 respectively (Juris)
 
 Bug fixes:
+...G...... [ZBX-8545] rewrote net.tcp.listen for Linux kernels 2.6.14 and above to employ the kernels NETLINK interface. Old method of information retrieval also improved (Juris)
 ....I..... [ZBX-8658] made various changes to odbc related m4 scripts to improve readability and library function availability (Juris)
 ..F....... [ZBX-8700] fixed possible SQL error in details of web scenario (Oleg)
 
